--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+arrow==0.8.0
+blinker==1.4
 click==6.6
+decorator==4.0.10
 Flask==0.11.1
+Flask-DebugToolbar==0.10.0
+Flask-SQLAlchemy==2.1
+geocoder==1.17.4
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 pkg-resources==0.0.0
+psycopg2==2.6.2
+python-dateutil==2.5.3
+pytz==2016.7
+ratelim==0.1.6
+requests==2.11.1
+six==1.10.0
+SQLAlchemy==1.1.3
 Werkzeug==0.11.11
