--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==0.11.1
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.1
 geocoder==1.17.4
+googlemaps==2.4.4
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
@@ -14,7 +15,7 @@ psycopg2==2.6.2
 python-dateutil==2.5.3
 pytz==2016.7
 ratelim==0.1.6
-requests==2.11.1
+requests==2.10.0
 six==1.10.0
 SQLAlchemy==1.1.3
 SQLAlchemy-Utils==0.32.9
