--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 arrow==0.8.0
 blinker==1.4
 click==6.6
+coverage==4.2
 decorator==4.0.10
+-e git+https://github.com/mobolic/facebook-sdk.git@d1e9a4f458fb5ee35e6ecdc034e2a51cf9c0f7b0#egg=facebook_sdk
 Flask==0.11.1
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.1
